# cloudpico

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.dev.yml  go.work  go.work.sum
.github/workflows/: server.yml
csensor/: CMakeLists.txt  PINOUT.md  README.md  ble_advertise.c  ble_advertise.h  bme280_pico_i2c.c  bme280_pico_i2c.h  btstack_config.h  main.c
db-tooling/: go.mod  main.go
db-tooling/sql/: seed.sql
deploy/: docker-compose.yml
deploy/mosquitto/: mosquitto.conf
firmware/: README.md  go.mod  main.go
gateway/: README.md  go.mod  go.sum
gateway/cmd/: main.go
gateway/internal/app/: app.go
gateway/internal/ble/: handler.go  listen.go  parse.go
gateway/internal/config/: config.go
gateway/internal/logging/: logger.go
gateway/internal/mqtt/: client.go
gateway/internal/sensor/: sensor.go
gateway/internal/utils/: hex.go
sensor/: README.md  ble.go  go.mod  go.sum  main.go  sensor.go
sensor/docs/: wiring.md
server/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum
server/cmd/: main.go
server/e2e/: smoke_test.go
server/internal/app/: run.go
server/internal/config/: config.go
server/internal/db/: db.go  sqlitelogger.go  sqlitelogger_test.go
server/internal/httpapi/: healthcheck.go  middleware.go  mux.go  server.go
server/internal/logging/: logger.go
server/internal/mqtt/: mqtt.go
server/pkg/app/: run.go
server/pkg/config/: config.go  config_test.go
shared/: go.mod
shared/types/: telemetry.go
tools/: go.mod  main.go
tools/migrate/: migrate.go
tools/sql/: post-seed.sql  schema.sql
(+50 files in other folders)
